[package]
name = "hermit-cuda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-lib = { path = "rpc-lib" }

# [target.'cfg(target_os = "hermit")'.dependencies]
# hermit-sys = "0.1.*"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os = "hermit"))'.dependencies.hermit-sys]
path = "../../hermit-sys"
default-features = false
features = ["with_submodule", "smoltcp", "pci", "acpi"]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
